helm/charts/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-cloud-key
spec:
  type: ExternalName
  externalName: 10.0.0.1
  ports:
    - port: 443
      protocol: TCP
